--- a/product.html
+++ b/product.html
@@ -30,7 +30,7 @@
             <div class="product-card">
         <img
         class="fit-picture"
-        src="image\product 1.PNG" 
+        src="image/product 1.png" 
         alt="product 1">
         <h3>Samsung Galaxy S25 ultra</h3>
         <p>N1,240,600</p>
@@ -144,4 +144,5 @@
 <p>&copy; 2025 FlexTech. All rights reserved.</p>
     </footer>
 </body>
+
 </html>
