Fix formatting and structure in about.html

--- a/about.html
+++ b/about.html
@@ -24,7 +24,7 @@
         <p>FlexTech was created to meet customer's satifaction.
            We provide quality products at reasonable prices.
            Highend tech gadgets at just the click of a button.
-           At FlexTech we believe in simple shopping 
+           At FlexTech we believe in simple shopping.
            FlexTech, shopping made <b>simple, flexible and satisfying</b>
         </p>
     </section>
@@ -34,4 +34,5 @@
 <p>&copy; 2025 FlexTech. All rights reserved.</p>
     </footer>
 </body>
+
 </html>
